# iceBw

./: CHANGES  CMakeLists.txt  README.md  READMI.TXT  arhivicebw  extractw  iceBw.h
additionally/: CMakeLists.txt  gr_klient.h  i_alter_rt.cpp  i_alter_rtr.cpp  i_kontr_vv.cpp  i_kontr_vv.h  i_pros_vv.cpp  i_rest.cpp  i_rest_k.cpp  i_rest_saldo.cpp  i_sbtaxi.cpp  i_sbtaxi_r.cpp  i_sozbrest.cpp  i_sozbrest_r.cpp  i_taxi.cpp  i_taxi_saldo.cpp  i_vv_start.cpp  i_zapis_vv.cpp  i_zapis_vv.h  kod_podr_v.cpp  l_grkl.cpp  l_grkl_p.cpp  l_grkl_v.cpp  l_klient_imp.cpp  l_klientr.cpp  l_klientr_bl.cpp  l_klientr_p.cpp  l_klientr_v.cpp  l_klientr_vg.cpp  l_restdok.cpp  l_restdok1.cpp  l_restdok2.cpp  l_restdok2.h  l_restdok2_vgr.cpp  l_restdok2_vmu.cpp  l_restdok2_znm.cpp  l_restdok_v.cpp  l_saldokl.cpp  l_spis_opl.cpp  l_spis_opl_p.cpp  (+88 more)
buhg_g/: CMakeLists.txt  admin_alterw.cpp  admin_alterw_m.cpp  admin_alterw_r.cpp  admin_alx.cpp  admin_bases.cpp  admin_bases.h  admin_bases_p.cpp  admin_cp_alxw.cpp  admin_del_alxw.cpp  admin_del_user.cpp  admin_dostup.cpp  admin_dumpbazin.cpp  admin_dumpbazin_m.cpp  admin_icebuser.cpp  admin_icebuser_v.cpp  admin_icebuser_v1.cpp  admin_l.cpp  admin_makebaz.cpp  admin_makebaz_m.cpp  admin_makebaz_r.cpp  admin_new_parol.cpp  admin_newuserw.cpp  admin_provbaz.cpp  admin_user.cpp  admin_user_p.cpp  alimw.cpp  amort23w.cpp  amortbyw.cpp  amortw.cpp  arz.cpp  arz.h  arz_m.cpp  arz_r.cpp  avtprkasw.cpp  avtpromu1w.cpp  avtpromuw.cpp  avtprouosw.cpp  avtprousl1w.cpp  avtprouslw.cpp  (+1344 more)
desktop/applications/: i_admin.desktop  i_start.desktop
libbuh_g/: CMakeLists.txt  iceb_00_kontr.cpp  iceb_00_skl.cpp  iceb_about.cpp  iceb_activate_link.cpp  iceb_akt_sv.cpp  iceb_alxin.cpp  iceb_alxout.cpp  iceb_alxzag.cpp  iceb_avp.cpp  iceb_avp.h  iceb_beep.cpp  iceb_blokps.cpp  iceb_calendar.cpp  iceb_calendar1.cpp  iceb_cat.cpp  iceb_clock.h  iceb_close_dserver.cpp  iceb_connect_dserver.cpp  iceb_copfil.cpp  iceb_cp.cpp  iceb_delfil.cpp  iceb_dikont.cpp  iceb_dir_select.cpp  iceb_dirfajl.cpp  iceb_dirlst.cpp  iceb_dumpbazout.cpp  iceb_er_op_fil.cpp  iceb_eropbaz.cpp  iceb_errorkas.cpp  iceb_exit.cpp  iceb_f_redfil.cpp  iceb_file_selection.cpp  iceb_fioruk.cpp  iceb_font_selection.cpp  iceb_fopen.cpp  iceb_fopen.h  iceb_fotoraz.cpp  iceb_fplus.cpp  iceb_fsystem.cpp  (+249 more)
libsql/: CMakeLists.txt  libsql.h  sql_closebaz.cpp  sql_cursor.cpp  sql_error.cpp  sql_escape_string.cpp  sql_flag.cpp  sql_nerror.cpp  sql_readkey.cpp  sql_rows.cpp  sql_zap.cpp  sqlfiltr.cpp
libutil_g/: CMakeLists.txt  iceb_u_adrsimv.cpp  iceb_u_atof.cpp  iceb_u_cpbstr.cpp  iceb_u_dat_to_sec.cpp  iceb_u_dat_to_sec_end.cpp  iceb_u_datetime_pr.cpp  iceb_u_datetime_sec.cpp  iceb_u_datzap.cpp  iceb_u_datzap_mg.cpp  iceb_u_denrog.cpp  iceb_u_double.cpp  iceb_u_double.h  iceb_u_double_to_char_zp.cpp  iceb_u_dpm.cpp  iceb_u_ekrs.cpp  iceb_u_fgets.cpp  iceb_u_fgets_bps.cpp  iceb_u_filtr_from_xml.cpp  iceb_u_filtr_xml.cpp  iceb_u_fio.cpp  iceb_u_fplus.cpp  iceb_u_getcurrentdir.cpp  iceb_u_getlogin.cpp  iceb_u_int.cpp  iceb_u_int.h  iceb_u_inttochar.cpp  iceb_u_kol_str.cpp  iceb_u_kol_str_l.cpp  iceb_u_kolbait.cpp  iceb_u_kolsimv.cpp  iceb_u_kszap.cpp  iceb_u_nofwords.cpp  iceb_u_okrug.cpp  iceb_u_period.cpp  iceb_u_poldan.cpp  iceb_u_pole.cpp  iceb_u_pole1.cpp  iceb_u_pole2.cpp  iceb_u_pole3.cpp  (+48 more)
locale/: iceBw_uk.po
util/: CMakeLists.txt  cattoget.cpp  iceb_print.cpp  iceb_print_operation.cpp  iceb_print_operation_old.cpp  r10_10.txt  r10_10l.txt  r10_12.txt  r10_12l.txt  r8_10.txt  r8_10l.txt  r8_12.txt  r8_12l.txt
xpm/: code_poslugi.xpm  flag.xpm  foto_raz.xpm  iceB.xpm  iceBw05.xpm  iceBw128.xpm
